# FCU_LabVIEW_Course_AI_part

./: .gitignore  README.md  fix_requirements.ipynb  pip_install.ipynb  pyproject.toml  python_node_example.py  requirements.txt  requirements_2.txt  requirements_3.txt  requirements_fail.txt  test_image.py  test_python.ipynb
HTTP/: Calculator.py  python_info_server.py  request_tutorial.ipynb  water_tower_control.ipynb  water_tower_control.py
HTTP/LabVIEW_HTTP/: LabVIEW_HTTP.aliases  LabVIEW_HTTP.lvlps  LabVIEW_HTTP.lvproj  yolov10.vi
HTTP/LabVIEW_HTTP/subVI/: HTTPMethod_1.vi  http_post_get.vi  ollama.vi
MachineLearning/: inference.py  inference.vi  inference_23Q1.vi  inference_23Q3.vi  inference_http.vi  inference_server_test.py  inference_server_v1.py  inference_server_v2.py  inference_torch.py  inference_v2.py  inference_v3.py  readpng.py  test_inference.ipynb
MachineLearning/models/yolov10n_openvino_model/: metadata.yaml  yolov10n.xml
Python_LabVIEW_Connection/: python_node_example.ipynb  python_node_example.py  python_node_example.vi  python_node_example_2023_Q1.vi  test_ngrok.ipynb  test_python.ipynb  test_python.py  test_python_32bit_23Q1.vi
Python_Node/: python_info.py  python_info.vi  python_node_example.vi  python_node_example_2023_Q3.vi  test_ngrok_ollama.ipynb  test_python.ipynb  test_python.py  test_python_64bit_23Q3.vi
_practice_answer/practice2/: inference_client.vi
