[tool.poetry]
name = "OpenVINO_notebook"
version = "0.1.0"
description = ""
authors = ["Hank <Engalpha@node-health.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyterlab = "*"
ipywidgets = "*"
ipykernel = ">=5.0"
ipython = ">=7.16.3"


## torch相關下載
# 這是給python3.11使用
# torch = { url = "https://download.pytorch.org/whl/cu124/torch-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=b1d40a13a6fd3f92aa5728ab84756571381b6b1ccae7ce62037c28d539687c25" }
# torchaudio = { url = "https://download.pytorch.org/whl/cu124/torchaudio-2.4.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=12f7f2b1c0fb435875175247083c8aca056face6bc5388b9a494a90ca197632c" }
# torchvision = { url = "https://download.pytorch.org/whl/cu124/torchvision-0.19.0%2Bcu124-cp311-cp311-win_amd64.whl#sha256=42ac55c0fd1cdea14c20168f0b24eba7fc2d2eb4ef75196ded7b76f81dee619f" }
# 這是給cpu使用
torch = "*"
torchaudio = "*"
torchvision = "*"
# torch = "^2.4.0+cu124"          # 這樣不行
# torchaudio = "^2.4.0+cu124"     # 這樣不行
# torchvision = "^0.19.0+cu124"   # 這樣不行

openvino = "^2024.3.0"
nncf = "*"
opencv-python = "*"
seaborn = "*"
pandas = "*"
scikit-learn = "*"
tqdm = "*"
matplotlib = "*"
numpy = "<2"
gradio = "^4.40.0"
segment-anything = "^1.0"
requests = "^2.32.3"
datasets = "^2.20.0"
# onnx = "^1.16.2"
onnx = "1.16.1"
einops = "^0.8.0"
# transformers = "^4.44.0"
transformers = "^4.43.0"


## 其他的安裝項目
# transformers-stream-generator = "^0.0.5"
# tiktoken = "^0.7.0"
# bitsandbytes = "^0.43.3"
# optimum = "^1.21.3"
# optimum-intel = "^1.18.2"
# qwen-agent = ">=0.0.6"
# modelscope-studio = ">=0.4.0"
# langchain-community = "^0.2.4"
# langchain = "^0.2.3"
# wikipedia = "^1.4.0"
# accelerate = "^0.33.0"


# 安裝yolov10
ultralytics = { git = "https://github.com/THU-MIG/yolov10.git" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"